// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coco:eslint generator should output eslint configuration 1`] = `
"parserOptions:
  ecmaVersion: 2018
  sourceType: module
  ecmaFeatures:
    jsx: true
env:
  node: true
  jest: true
extends:
  - 'eslint:recommended'
  - 'airbnb-base'
  - 'prettier'
rules:
  indent:
    - error
    - 2
    - SwitchCase: 1
  linebreak-style:
    - error
    - unix
  quotes:
    - single
    - allowTemplateLiterals: true
  semi:
    - error
    - always
  arrow-parens:
    - error
    - always
  max-len:
    - error
    - code: 120
"
`;

exports[`coco:eslint generator should render properly with babel parser 1`] = `
"parser: babel-eslint
parserOptions:
  ecmaVersion: 2018
  sourceType: module
  ecmaFeatures:
    jsx: true
rules:
  indent:
    - error
    - 2
    - SwitchCase: 1
  linebreak-style:
    - error
    - unix
  quotes:
    - single
    - allowTemplateLiterals: true
  semi:
    - error
    - always
  arrow-parens:
    - error
    - always
  max-len:
    - error
    - code: 120
"
`;

exports[`coco:eslint generator should render properly without babel parser 1`] = `
"parserOptions:
  ecmaVersion: 2018
  sourceType: module
  ecmaFeatures:
    jsx: true
rules:
  indent:
    - error
    - 2
    - SwitchCase: 1
  linebreak-style:
    - error
    - unix
  quotes:
    - single
    - allowTemplateLiterals: true
  semi:
    - error
    - always
  arrow-parens:
    - error
    - always
  max-len:
    - error
    - code: 120
"
`;

exports[`coco:eslint generator should render property context 1`] = `
"parserOptions:
  ecmaVersion: 2018
  sourceType: module
  ecmaFeatures:
    jsx: true
env:
  node: true
  jest: true
rules:
  indent:
    - error
    - 2
    - SwitchCase: 1
  linebreak-style:
    - error
    - unix
  quotes:
    - single
    - allowTemplateLiterals: true
  semi:
    - error
    - always
  arrow-parens:
    - error
    - always
  max-len:
    - error
    - code: 120
"
`;

exports[`coco:eslint generator should render property environment extension 1`] = `
"parserOptions:
  ecmaVersion: 2018
  sourceType: module
  ecmaFeatures:
    jsx: true
extends:
  - 'eslint:recommended'
rules:
  indent:
    - error
    - 2
    - SwitchCase: 1
  linebreak-style:
    - error
    - unix
  quotes:
    - single
    - allowTemplateLiterals: true
  semi:
    - error
    - always
  arrow-parens:
    - error
    - always
  max-len:
    - error
    - code: 120
"
`;

exports[`coco:eslint render should render properly with babel parser 1`] = `
"parser: babel-eslint
parserOptions:
  ecmaVersion: 2018
  sourceType: module
  ecmaFeatures:
    jsx: true
rules:
  indent:
    - error
    - 2
    - SwitchCase: 1
  linebreak-style:
    - error
    - unix
  quotes:
    - single
    - allowTemplateLiterals: true
  semi:
    - error
    - always
  arrow-parens:
    - error
    - always
  max-len:
    - error
    - code: 120
"
`;

exports[`coco:eslint render should render properly without babel parser 1`] = `
"parserOptions:
  ecmaVersion: 2018
  sourceType: module
  ecmaFeatures:
    jsx: true
rules:
  indent:
    - error
    - 2
    - SwitchCase: 1
  linebreak-style:
    - error
    - unix
  quotes:
    - single
    - allowTemplateLiterals: true
  semi:
    - error
    - always
  arrow-parens:
    - error
    - always
  max-len:
    - error
    - code: 120
"
`;

exports[`coco:eslint render should render property context 1`] = `
"parserOptions:
  ecmaVersion: 2018
  sourceType: module
  ecmaFeatures:
    jsx: true
env:
  node: true
  jest: true
rules:
  indent:
    - error
    - 2
    - SwitchCase: 1
  linebreak-style:
    - error
    - unix
  quotes:
    - single
    - allowTemplateLiterals: true
  semi:
    - error
    - always
  arrow-parens:
    - error
    - always
  max-len:
    - error
    - code: 120
"
`;

exports[`coco:eslint render should render property environment extension 1`] = `
"parserOptions:
  ecmaVersion: 2018
  sourceType: module
  ecmaFeatures:
    jsx: true
extends:
  - 'eslint:recommended'
rules:
  indent:
    - error
    - 2
    - SwitchCase: 1
  linebreak-style:
    - error
    - unix
  quotes:
    - single
    - allowTemplateLiterals: true
  semi:
    - error
    - always
  arrow-parens:
    - error
    - always
  max-len:
    - error
    - code: 120
"
`;
